--- a/mycareer/src/main/res/values/strings.xml
+++ b/mycareer/src/main/res/values/strings.xml
@@ -19,5 +19,24 @@
     <string name="can_name_tab">Can</string>
     <string name="do_name_tab">Do</string>
     <string name="are_name_tab">Are</string>
-    
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="action_websearch">Web search</string>
+    <string name="app_not_available">Sorry, there\'s no web browser available</string>
+
+
+    <!-- Drawing Menu -->
+    <string name="menu_trending">Trending</string>
+    <string name="menu_recommendations">Recommendations</string>
+    <string name="menu_history">History</string>
+    <string name="menu_personality">Personality</string>
+    <string name="menu_friends">Friends</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_personality_review">Review</string>
+    <string name="menu_personality_retake">Retake test</string>
+    <string name="menu_friends_popular">Popular</string>
+    <string name="menu_friends_spotlight">Spotlight</string>
+    <string name="menu_settings_about">About</string>
+    <string name="menu_settings_logout">Logout</string>
 </resources>
