adding holland algorithm

--- a/mycareer/src/main/res/values/strings.xml
+++ b/mycareer/src/main/res/values/strings.xml
@@ -92,5 +92,6 @@
     <string name="holland47_string">47. Sales people</string>
     <string name="holland48_string">48. Filing letters and reports</string>
 
+    <string name="riasec_header">Your personality is</string>
 
 </resources>
