--- a/mycareer/src/main/res/values/strings.xml
+++ b/mycareer/src/main/res/values/strings.xml
@@ -94,4 +94,11 @@
 
     <string name="riasec_header">Your personality is</string>
 
+
+    <string name="realistic_description">Realistic occupations frequently involve work activities that include practical, hands-on problems and solutions. They often deal with plants, animals, and real-world materials like wood, tools, and machinery. Many of the occupations require working outside, and do not involve a lot of paperwork or working closely with others</string>
+    <string name="investigative_description">Investigative occupations frequently involve working with ideas, and require an extensive amount of thinking. These occupations can involve searching for facts and figuring out problems mentally</string>
+    <string name="artistic_description">Artistic occupations frequently involve working with forms, designs and patterns. They often require self-expression and the work can be done without following a clear set of rules</string>
+    <string name="social_description">Social occupations frequently involve working with, communicating with, and teaching people. These occupations often involve helping or providing service to others</string>
+    <string name="enterprising_description">Enterprising occupations frequently involve starting up and carrying out projects. These occupations can involve leading people and making many decisions. Sometimes they require risk taking and often deal with business</string>
+    <string name="conventional_description">Conventional occupations frequently involve following set procedures and routines. These occupations can include working with data and details more than with ideas. Usually there is a clear line of authority to follow</string>
 </resources>
