--- a/mycareer/src/main/res/values/strings.xml
+++ b/mycareer/src/main/res/values/strings.xml
@@ -95,6 +95,13 @@
     <string name="riasec_header">Your personality is</string>
 
 
+    <string name="realistic_header">Realistic</string>
+    <string name="investigative_header">Investigative</string>
+    <string name="artistic_header">Artistic</string>
+    <string name="social_header">Social</string>
+    <string name="enterprising_header">Enterprising</string>
+    <string name="conventional_header">Conventional</string>
+
     <string name="realistic_description">Realistic occupations frequently involve work activities that include practical, hands-on problems and solutions. They often deal with plants, animals, and real-world materials like wood, tools, and machinery. Many of the occupations require working outside, and do not involve a lot of paperwork or working closely with others</string>
     <string name="investigative_description">Investigative occupations frequently involve working with ideas, and require an extensive amount of thinking. These occupations can involve searching for facts and figuring out problems mentally</string>
     <string name="artistic_description">Artistic occupations frequently involve working with forms, designs and patterns. They often require self-expression and the work can be done without following a clear set of rules</string>
